update project demo gcm need config

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,13 +35,13 @@
         <!-- [END gcm_receiver] -->
 
         <!-- [START gcm_listener] -->
-        <service
-            android:name=".gcm.MyGcmListenerService"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-            </intent-filter>
-        </service>
+        <!--<service-->
+            <!--android:name=".gcm.MyGcmListenerService"-->
+            <!--android:exported="false" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
+            <!--</intent-filter>-->
+        <!--</service>-->
         <!-- [END gcm_listener] -->
         <!-- [START instanceId_listener] -->
         <service
